tests/negative/undefined_fn.sans
// expect-error: undefined
main() I {
  x = does_not_exist(42)
  x
}
